🚑 fix: Fixed backend unlike issue and missing data in Voice module APIs.